updates: from comments